--- a/css/style.css
+++ b/css/style.css
@@ -128,8 +128,6 @@ img{
            Menu css end
 =========================================*/
 
-
-
 /* =======================================
            Banner css end
 =========================================*/
@@ -138,7 +136,7 @@ img{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 80px 0;
+    padding: 88px 0;
     position: relative;
     z-index: 1;
 }
@@ -318,6 +316,7 @@ img{
 	top: -37px;
 	transform: translateX(-50%);
 }
+
 .service-icon::after {
 	position: absolute;
 	content: '';
@@ -327,6 +326,7 @@ img{
 	height: 69px;
 	border: 2px solid #f1f1f1;
 	border-radius: 50%;
+  
 }
 .service-icon::before {
 	position: absolute;
@@ -338,14 +338,16 @@ img{
 	border: 4px solid #ffffff;
 	border-radius: 50%;
 }
+.service_col:hover{
+    transition: all linear .3s;
+}
 .service_col:hover .service-icon{
     background: #5bc5f4;
-    
-    
+    transition: all linear .3s; 
 }
+
 .service_col:hover .service-icon::after{
-    border-color: #5bc5f4;
-    
+    border-color: #5bc5f4;  
 }
 .service_col:hover{
     box-shadow: 0px 0px 24px 6px rgb(0, 0, 0, .2);
@@ -462,6 +464,7 @@ img{
     right: -80px; 
     transition: all linear .6s;
     height: 100%;
+    padding-top: 25px;
 }
 
 .team-img:hover .img-overlay{
@@ -565,7 +568,7 @@ img{
     z-index: -1;
 }
 .test-col:hover .test-text::after{
-    background: #5bc5f4;
+    
     box-shadow: 0px 0px 24px 6px rgb(0, 0, 0, .2);
 }
 .test-text h2{
